# humuter-cli

./: .gitignore  pyproject.toml
humuter/: __init__.py  agents.py  api.py  auth.py  cli.py  config.py  credits.py
humuter/tui/: app.py  theme.tcss
humuter/tui/screens/: agent_detail.py  agents.py  chat.py  configure.py  create_agent.py  credits.py  dashboard.py  deploy.py
