[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humuter-cli"
version = "0.2.0"
description = "Deploy AI agents from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Humuter", email = "hello@humuter.com"}]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "textual>=1.0.0",
]

[project.scripts]
humuter = "humuter.cli:main"

[tool.setuptools.packages.find]
include = ["humuter*"]

[tool.setuptools.package-data]
humuter = ["*.tcss"]
